[project]
name = "bio-patrol"
version = "1.0.0"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "grpcio==1.66.1",
    "kachaka-api==3.10.6",
    "protobuf==5.27.2",
    "paho-mqtt==2.1.0",
    "httpx>=0.27.0",
    "uvicorn==0.34.0",
    "apscheduler>=3.10.4",
    "kachaka-sdk-toolkit",
]

[tool.uv.sources]
kachaka-sdk-toolkit = { git = "https://github.com/sigmarobotics/kachaka-sdk-toolkit.git" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
